--- a/style.css
+++ b/style.css
@@ -114,7 +114,10 @@ p {
 .msg {
   text-align: center;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
+  body {
+    padding: 0vh;
+  }
   .container {
     font-size: 14px;
   }
@@ -125,5 +128,17 @@ p {
     margin: auto;
     width: auto;
     max-height: 10.8em;
+  }
+  .search-container {
+    display: block;
+  }
+  .search-container button {
+    display: block;
+    padding: 10px;
+    width: 100%;
+    margin-top: 10px;
+  }
+  .search-container input {
+    width: 100%;
   }
 }
